# om_lecture_fulfilment

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  Dockerfile.osrm  docker-compose.yml  main.py  pyproject.toml  readme.md  scenario_generator.py
apps/public/vrptw/: d3.css  vehicle_routing.py
apps/public/vrptw/data/: completed.txt  metadata.json  scenarios.csv  venues.parquet
apps/public/vrptw/data/routes/: scenario_05_02_05.json  scenario_05_02_10.json  scenario_05_02_15.json  scenario_05_02_20.json  scenario_05_02_25.json  scenario_05_02_30.json  scenario_05_03_05.json  scenario_05_03_10.json  scenario_05_03_15.json  scenario_05_03_20.json  scenario_05_03_25.json  scenario_05_03_30.json  scenario_05_04_05.json  scenario_05_04_10.json  scenario_05_04_15.json  scenario_05_04_20.json  scenario_05_04_25.json  scenario_05_04_30.json  scenario_05_05_05.json  scenario_05_05_10.json  scenario_05_05_15.json  scenario_05_05_20.json  scenario_05_05_25.json  scenario_05_05_30.json  scenario_05_06_05.json  scenario_05_06_10.json  scenario_05_06_15.json  scenario_05_06_20.json  scenario_05_06_25.json  scenario_05_06_30.json  scenario_05_07_05.json  scenario_05_07_10.json  scenario_05_07_15.json  scenario_05_07_20.json  scenario_05_07_25.json  (+284 more)
src/vrptw/: __init__.py  config.py  main.py  scenario_config.py  scenario_storage.py  solver.py  utils.py
src/vrptw/data/: __init__.py  osrm.py  overpass.py
src/vrptw/visualization/: __init__.py  folium_viz.py  matplotlib_viz.py
tests/: test_config.py  test_scenario_config.py  test_scenario_storage.py  test_solver.py
